--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/pixi.js": "^4.8.3",
+    "madge": "^3.3.0",
     "parcel-bundler": "^1.10.3",
     "prettier": "^1.15.2",
     "typescript": "^3.1.6"
