--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "compilerOptions": {
-    "lib": ["es2017", "dom"],
-    "baseUrl": "./",
-    "paths": {
-      "components": ["./src/components"],
-      "core": ["./src/core"],
-      "systems": ["./src/systems"],
-      "utils": ["./src/utils"]
-    }
+    "lib": ["es2017", "dom"]
   }
 }
