chore: fix imports and bundler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
-    "lib": ["es2017", "dom"]
+    "module": "commonjs",
+    "target": "ES6",
+    "importHelpers": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "lib": ["dom", "es2017"],
+    "paths": {
+      "src/*": ["src/*"]
+    }
   }
 }
