--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My new Pixi project",
   "main": "index.js",
   "scripts": {
-    "start": "parcel -p 3000 --hmr-port 25565 public/index.html",
+    "start": "node fuse.js",
+    "madge": "madge --circular ./src/index.ts --warning",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": {
@@ -15,11 +16,13 @@
   "author": "Daniel Belohlavek",
   "license": "MIT",
   "dependencies": {
-    "pixi.js": "^4.8.2"
+    "pixi.js": "^4.8.2",
+    "src": "^1.1.2"
   },
   "devDependencies": {
     "@types/pixi.js": "^4.8.3",
-    "parcel-bundler": "^1.10.3",
+    "fuse-box": "^3.6.0",
+    "madge": "^3.3.0",
     "prettier": "^1.15.2",
     "typescript": "^3.1.6"
   }
