--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node fuse.js",
     "madge": "madge --circular ./src/index.ts --warning",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node fuse.test.js"
   },
   "prettier": {
     "semi": false,
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/pixi.js": "^4.8.3",
     "fuse-box": "^3.6.0",
+    "fuse-test-runner": "^1.0.16",
     "madge": "^3.3.0",
     "prettier": "^1.15.2",
     "typescript": "^3.1.6"
