--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "lib": ["dom", "es2017"],
+    "strict": true,
     "paths": {
       "src/*": ["src/*"]
     }
